Allow ssh from github actions

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,6 +25,8 @@ jobs:
         key: ${{ secrets.PRIVATE_KEY }}
         port: 22
         script: |
+          eval `ssh-agent -s`
+          ssh-add ~/.ssh/id_rsa_luoabd-github
           cd /extra/book-bingo/book-bingo-frontend/
           git pull origin main
           git status
